[project]
name = "recommender"
version = "0.1.0"
authors = [
    { name = "Mehant Kammakomati", email = "mehant.kammakomati2@ibm.com" },
    { name = "Harikrishnan Balagopal", email = "harikrishnan.balagopal@ibm.com" },
]
description = "Recommends config to use for model tuning."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "huggingface-hub",
    "loguru",
    "pandas",
    "transformers",
    "jsonpatch",
    "datasets"
]

[project.optional-dependencies]
dev = [
    "black", 
    "mypy",
    "pylint", 
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"recommender.knowledge_base" = ["*.csv", "**/*.yaml"]

[project.urls]
Homepage = "https://github.com/foundation-model-stack/tuning-config-recommender"
Issues = "https://github.com/foundation-model-stack/tuning-config-recommender/issues"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format ="[%(asctime)s %(levelname)-5s][%(filename)20s:%(lineno)3s %(funcName)25s()] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
