[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tuning_config_recommender"
version = "0.1.0"
authors = [
    { name = "Mehant Kammakomati", email = "mehant.kammakomati2@ibm.com" },
    { name = "Harikrishnan Balagopal", email = "harikrishnan.balagopal@ibm.com" },
    { name = "Yashasvi Chaurasia", email = "yashasvi@ibm.com" },
]
description = "Recommends config to use for model tuning."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "huggingface-hub",
    "loguru",
    "pandas",
    "transformers",
    "jsonpatch",
    "datasets",
    "fm-training-estimator==0.1.3",
    "setuptools==70.0.0"
]

[project.optional-dependencies]
dev = [
    "black", 
    "mypy",
    "pylint", 
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"recommender.knowledge_base" = ["*.csv", "**/*.yaml"]


[project.urls]
Homepage = "https://github.com/foundation-model-stack/tuning-config-recommender"
Issues = "https://github.com/foundation-model-stack/tuning-config-recommender/issues"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format ="[%(asctime)s %(levelname)-5s][%(filename)20s:%(lineno)3s %(funcName)25s()] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
line-length = 88
fix = true
unsafe-fixes = false
src = ["src"]

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
]

ignore = [
    "E501",
    "F401",
    "F403",
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
